--- a/icbox.conf
+++ b/icbox.conf
@@ -20,15 +20,35 @@ server {
     add_header X-XSS-Protection "1; mode=block";
 }
 
-##
-# n8n
-##
+# Redirecionamento HTTP para HTTPS
 server {
     listen 80;
     server_name n8n.icbox.com.br;
-
     access_log /var/log/nginx/n8n.access.log;
     error_log /var/log/nginx/n8n.error.log;
+
+    # Redireciona todo tráfego HTTP para HTTPS
+    return 301 https://$host$request_uri;
+}
+
+# Configuração HTTPS
+server {
+    listen 443 ssl;
+    server_name n8n.icbox.com.br;
+    access_log /var/log/nginx/n8n.access.log;
+    error_log /var/log/nginx/n8n.error.log;
+
+    # Configuração do certificado SSL
+    ssl_certificate /etc/letsencrypt/live/n8n.icbox.com.br/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/n8n.icbox.com.br/privkey.pem;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
+
+    # HSTS para forçar HTTPS
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-Content-Type-Options "nosniff";
 
     location / {
         proxy_pass http://127.0.0.1:5678;
@@ -36,10 +56,12 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-    }
 
-    add_header X-Frame-Options "SAMEORIGIN";
-    add_header X-Content-Type-Options "nosniff";
+        # Suporte a WebSockets
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_read_timeout 3600s; # Aumentar timeout para WebSockets
+    }
 }
 
 ##
