--- a/icbox.conf
+++ b/icbox.conf
@@ -2,7 +2,6 @@
 # Servidor principal (site estático)
 ##
 server {
-    listen 80;
     server_name icbox.com.br www.icbox.com.br;
 
     root /home/icbox/web;
@@ -18,37 +17,23 @@ server {
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-Content-Type-Options "nosniff";
     add_header X-XSS-Protection "1; mode=block";
+
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/icbox.com.br/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/icbox.com.br/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
 }
 
-# Redirecionamento HTTP para HTTPS
+##
+# n8n
+##
 server {
-    listen 80;
     server_name n8n.icbox.com.br;
+
     access_log /var/log/nginx/n8n.access.log;
     error_log /var/log/nginx/n8n.error.log;
-
-    # Redireciona todo tráfego HTTP para HTTPS
-    return 301 https://$host$request_uri;
-}
-
-# Configuração HTTPS
-server {
-    listen 443 ssl;
-    server_name n8n.icbox.com.br;
-    access_log /var/log/nginx/n8n.access.log;
-    error_log /var/log/nginx/n8n.error.log;
-
-    # Configuração do certificado SSL
-    ssl_certificate /etc/letsencrypt/live/n8n.icbox.com.br/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/n8n.icbox.com.br/privkey.pem;
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
-    ssl_prefer_server_ciphers on;
-
-    # HSTS para forçar HTTPS
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-    add_header X-Frame-Options "SAMEORIGIN";
-    add_header X-Content-Type-Options "nosniff";
 
     location / {
         proxy_pass http://127.0.0.1:5678;
@@ -56,19 +41,23 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-
-        # Suporte a WebSockets
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_read_timeout 3600s; # Aumentar timeout para WebSockets
     }
+
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-Content-Type-Options "nosniff";
+
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/n8n.icbox.com.br/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/n8n.icbox.com.br/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
 }
 
 ##
 # API
 ##
 server {
-    listen 80;
     server_name api.icbox.com.br;
 
     access_log /var/log/nginx/api.access.log;
@@ -84,13 +73,19 @@ server {
 
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-Content-Type-Options "nosniff";
+
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/api.icbox.com.br/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/api.icbox.com.br/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
 }
 
 ##
 # Painel
 ##
 server {
-    listen 80;
     server_name panel.icbox.com.br;
 
     root /home/icbox/panel;
@@ -106,4 +101,60 @@ server {
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-Content-Type-Options "nosniff";
     add_header X-XSS-Protection "1; mode=block";
+
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/panel.icbox.com.br/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/panel.icbox.com.br/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
+}
+
+server {
+    if ($host = n8n.icbox.com.br) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+    listen 80;
+    server_name n8n.icbox.com.br;
+    return 404; # managed by Certbot
+
+
+}
+server {
+    if ($host = api.icbox.com.br) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+    listen 80;
+    server_name api.icbox.com.br;
+    return 404; # managed by Certbot
+
+
+}
+server {
+    if ($host = panel.icbox.com.br) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+    listen 80;
+    server_name panel.icbox.com.br;
+    return 404; # managed by Certbot
+
+
+}
+server {
+    if ($host = icbox.com.br) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+    listen 80;
+    server_name icbox.com.br www.icbox.com.br;
+    return 404; # managed by Certbot
+
+
 }
