--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:16
@@ -74,6 +72,10 @@ services:
       - N8N_LOG_FILE_MAXSIZE=10
       - N8N_LOG_FILE_MAXCOUNT=3
       - N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=true
+      - N8N_RUNNERS_ENABLED=true
+      - N8N_TRUST_PROXY=true
+      - N8N_SECURE_COOKIE=true
+      - N8N_DIAGNOSTICS_ENABLED=false
     secrets:
       - postgres_password
       - redis_password
